--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v4
+        uses: meta-introspector/checkout@v4
       -
         name: Set up QEMU
         id: qemu
@@ -47,7 +47,7 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v4
+        uses: meta-introspector/checkout@v4
       -
         name: Stop docker
         run: |
