--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,15 +17,15 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v4
+        uses: meta-introspector/checkout@v4
       -
         name: Test
-        uses: docker/bake-action@v4
+        uses: meta-introspector/bake-action@v4
         with:
           targets: test
       -
         name: Upload coverage
-        uses: codecov/codecov-action@v4
+        uses: meta-introspector/codecov-action@v4
         with:
           file: ./coverage/clover.xml
           token: ${{ secrets.CODECOV_TOKEN }}
