--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v4
+        uses: meta-introspector/checkout@v4
       -
         name: Targets matrix
         id: targets
@@ -37,9 +37,9 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v4
+        uses: meta-introspector/checkout@v4
       -
         name: Validate
-        uses: docker/bake-action@v4
+        uses: meta-introspector/bake-action@v4
         with:
           targets: ${{ matrix.target }}
